--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Copper Pro</title>
   </head>
   <body>
     <div id="root"></div>
